ingress-resource/ingress-resources.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: data-ingress
spec:
  rules:
  - http:
      paths:
      - path: /data
        backend:
          serviceName: data-transform
          servicePort: 4000
      - path: /graph
        backend:
          serviceName: data-transform
          servicePort: 4000
      - path: /bycountry
        backend:
          serviceName: data-selector
          servicePort: 4000
      - path: /graphbycountry
        backend:
          serviceName: data-selector
          servicePort: 4000
